add_library(
  mediaelch_music
  OBJECT
  Album.cpp
  AlbumController.cpp
  Artist.cpp
  ArtistController.cpp
  MusicFileSearcher.cpp
  MusicFilesWidget.cpp
  MusicModel.cpp
  MusicModelItem.cpp
  MusicMultiScrapeDialog.cpp
  MusicProxyModel.cpp
  MusicSearch.cpp
  MusicSearchWidget.cpp
  MusicWidget.cpp
  MusicWidgetAlbum.cpp
  MusicWidgetArtist.cpp
)
target_link_libraries(
  mediaelch_music
  PRIVATE
    Qt5::Widgets
    Qt5::Sql
    Qt5::Network
    Qt5::Xml
    Qt5::Concurrent
)
mediaelch_post_target_defaults(mediaelch_music)
